--- a/.github/workflows/polaris-workflow.yml
+++ b/.github/workflows/polaris-workflow.yml
@@ -1,4 +1,4 @@
-name: Polaris Security Scan
+name: Polaris SAST
 "on":
   push:
     branches:
@@ -27,7 +27,7 @@ jobs:
         with:
           polaris_server_url: ${{ vars.POLARIS_URL }}
           polaris_access_token: ${{ secrets.POLARIS_ACCESS_TOKEN }}
-          polaris_assessment_types: sca
+          polaris_assessment_types: sast
           polaris_waitForScan: true
           mark_build_status: failure
           include_diagnostics: false
