--- a/.github/workflows/polaris-workflow.yml
+++ b/.github/workflows/polaris-workflow.yml
@@ -23,14 +23,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Polaris Security Scan
         id: polaris-scan
-        uses: blackduck-inc/black-duck-security-scan@v2
+        uses: blackduck-inc/black-duck-security-scan@SIGINT-3993-updated
         with:
           polaris_server_url: ${{ vars.POLARIS_URL }}
           polaris_access_token: ${{ secrets.POLARIS_ACCESS_TOKEN }}
-          polaris_assessment_types: SCA
-          polaris_waitForScan: true
-          mark_build_status: failure
-          include_diagnostics: false
-          polaris_prComment_enabled: false
-          polaris_reports_sarif_create: false
-          polaris_upload_sarif_report: false
+          polaris_assessment_types: SCA, SAST
+          include_diagnostics: true
+          polaris_prComment_enabled: true
+          polaris_reports_sarif_create: true
+          polaris_upload_sarif_report: true
