--- a/.github/workflows/polaris-workflow.yml
+++ b/.github/workflows/polaris-workflow.yml
@@ -29,6 +29,6 @@ jobs:
           polaris_access_token: ${{ secrets.POLARIS_ACCESS_TOKEN }}
           polaris_assessment_types: SCA, SAST
           include_diagnostics: true
-          polaris_prComment_enabled: true
+          polaris_prComment_enabled: false
           polaris_reports_sarif_create: true
           polaris_upload_sarif_report: true
