--- a/.github/workflows/polaris-workflow.yml
+++ b/.github/workflows/polaris-workflow.yml
@@ -30,4 +30,4 @@ jobs:
           polaris_assessment_types: SCA
           include_diagnostics: true
           coverity_version: '2023.6.0'
-          bridgecli_download_url: 'https://artifactory.tools.duckutil.net/artifactory/clops-local/integrations/bridge/binaries/bridge-cli-bundle/3.9.4rc1/bridge-cli-bundle-3.9.4rc1-linux64.zip'
+          bridgecli_download_url: 'https://artifactory.tools.duckutil.net/artifactory/clops-local/integrations/bridge/binaries/bridge-cli-bundle/3.9.4rc1/bridge-cli-bundle-3.9.4rc1-macos_arm.zip'
