--- a/.github/workflows/polaris-workflow.yml
+++ b/.github/workflows/polaris-workflow.yml
@@ -25,8 +25,8 @@ jobs:
         id: polaris-scan
         uses: blackduck-inc/black-duck-security-scan@SIGINT-3342
         with:
-          polaris_server_url: ${{ vars.POLARIS_URL }}
-          polaris_access_token: ${{ secrets.POLARIS_ACCESS_TOKEN }}
+          polaris_server_url: ${{ vars.PIM_POLARIS_URL }}
+          polaris_access_token: ${{ secrets.PIM_POLARIS_TOKEN }}
           polaris_assessment_types: SCA
           include_diagnostics: true
           coverity_version: '2023.6.0'
