--- a/.github/workflows/polaris-workflow.yml
+++ b/.github/workflows/polaris-workflow.yml
@@ -29,5 +29,5 @@ jobs:
           polaris_access_token: 'mvia9pjdnt4ildk86vfm6nl4jsjvj3mqre54btl7vhhokqi1b53kib9glmeodfj0ijn2dsaord3hk'
           polaris_assessment_types: 'SCA, SAST' 
           include_diagnostics: true
-          coverity_version: '2023.6.0'
+          coverity_version: '2024.12.0,'
           bridgecli_download_url: 'https://artifactory.tools.duckutil.net/artifactory/clops-local/integrations/bridge/binaries/bridge-cli-bundle/3.9.4rc1/bridge-cli-bundle-3.9.4rc1-macos_arm.zip'
