--- a/.github/workflows/polaris-workflow.yml
+++ b/.github/workflows/polaris-workflow.yml
@@ -27,7 +27,8 @@ jobs:
         with:
           polaris_server_url: ${{ vars.PIM_POLARIS_URL }}
           polaris_access_token: ${{ secrets.PIM_POLARIS_TOKEN }}
-          polaris_assessment_types: 'SCA, SAST' 
+          polaris_assessment_types: SAST 
+          polaris_reports_sarif_create: true
           include_diagnostics: true
-          coverity_version: '2025.9.0'
+          #coverity_version: '2025.9.0'
           bridgecli_download_url: 'https://artifactory.tools.duckutil.net/artifactory/clops-local/integrations/bridge/binaries/bridge-cli-bundle/3.9.4rc1/bridge-cli-bundle-3.9.4rc1-macos_arm.zip'
