--- a/.github/workflows/polaris-workflow.yml
+++ b/.github/workflows/polaris-workflow.yml
@@ -17,7 +17,7 @@ on:
   workflow_dispatch: {}
 jobs:
   polaris:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout Source
         uses: actions/checkout@v4
@@ -30,5 +30,5 @@ jobs:
           polaris_assessment_types: SAST 
           polaris_reports_sarif_create: true
           include_diagnostics: true
-          coverity_version: '2025.3.0'
-          #bridgecli_download_url: 'https://artifactory.tools.duckutil.net/artifactory/clops-local/integrations/bridge/binaries/bridge-cli-bundle/3.9.4rc1/bridge-cli-bundle-3.9.4rc1-macos_arm.zip'
+          #coverity_version: '2025.3.0'
+          bridgecli_download_url: 'https://artifactory.tools.duckutil.net/artifactory/clops-local/integrations/bridge/binaries/bridge-cli-bundle/3.9.4rc1/bridge-cli-bundle-3.9.4rc1-macos_arm.zip'
