--- a/.github/workflows/polaris-workflow.yml
+++ b/.github/workflows/polaris-workflow.yml
@@ -30,5 +30,5 @@ jobs:
           polaris_assessment_types: SAST 
           polaris_reports_sarif_create: true
           include_diagnostics: true
-          #coverity_version: '2025.6.2'
+          coverity_version: '2025.6.2'
           bridgecli_download_url: 'https://artifactory.tools.duckutil.net/artifactory/clops-local/integrations/bridge/binaries/bridge-cli-bundle/3.9.5rc1/bridge-cli-bundle-3.9.5rc1-macos_arm.zip'
