--- a/.github/workflows/polaris-workflow.yml
+++ b/.github/workflows/polaris-workflow.yml
@@ -1,4 +1,4 @@
-name: Polaris Security Scan
+name: Polaris Security Scan - P1 (Default Coverity Version)
 on:
   push:
     branches:
@@ -30,5 +30,5 @@ jobs:
           polaris_assessment_types: 'SCA,SAST'
           polaris_test_sast_type: 'SAST_FULL'
           polaris_reports_sarif_create: true
-          coverity_version: '2025.6.2'
+          # coverity_version: NOT SET - Use default version (P1 Test Case)
           bridgecli_download_url: 'https://artifactory.tools.duckutil.net/artifactory/clops-local/integrations/bridge/binaries/bridge-cli-bundle/3.9.5rc1/bridge-cli-bundle-3.9.5rc1-macos_arm.zip'
