--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch: 
 
 jobs:
-  build:
-    runs-on: [ ubuntu-latest ]
+  build: 
+    runs-on: self-hosted
     steps:
       - name: Checkout Source
         uses: actions/checkout@v4
