--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v4
       - name: Coverity Scan
-        uses: blackduck-inc/black-duck-security-scan@SIGINT-4250
+        uses: blackduck-inc/black-duck-security-scan@v2
         with:
           ### SCANNING: Required fields
           coverity_url: ${{ vars.COVERITY_URL }}
