--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -1,49 +1,36 @@
-name: CI-Polaris-Basic
+name: CI-Coverity-Basic
 on:
   push:
-    branches: [main, master, develop, stage, release]
+    branches: [ main, master, develop, stage, release ]
   pull_request:
-    branches: [main, master, develop, stage, release]
-  workflow_dispatch:
-  
-  
+    branches: [ main, master, develop, stage, release ]
+  workflow_dispatch: 
+
 jobs:
-  build:
+  build: 
     runs-on: self-hosted
     steps:
-    - name: Checkout Source
-      uses: actions/checkout@v4
-    - name: Polaris Scan
-      id: polaris-scan
-      uses: blackduck-inc/black-duck-security-scan@SIGINT-4250
-      with:
-        ### SCANNING: Required fields
-        polaris_server_url: ${{ vars.POLARIS_URL }}
-        polaris_access_token: ${{ secrets.POLARIS_TOKEN }}
-        polaris_assessment_types: SAST
-        
-        ### SCANNING: Optional fields
-        # polaris_application_name: ${{ github.event.repository.name }}
-        # polaris_project_name: ${{ github.event.repository.name }}
-
-                ### PULL REQUEST COMMENTS: Uncomment below to enable
-        # polaris_prComment_enabled: true 
-        # github_token: ${{ secrets.GITHUB_TOKEN }} # Required when PR comments is enabled
-
-                ### SARIF report parameters
-        polaris_reports_sarif_create: true
-        #polaris_upload_sarif_report: true
-        polaris_test_sast_location: hybrid
-        include_diagnostics: true
-                ### Signature scan
-        #polaris_test_sca_type: "SCA-SIGNATURE"
-
-                ### Mark build status if policy violating issues are found
-        # mark_build_status: 'success'
-
-                ### Uncomment below configuration to add custom logic based on return status
-        # - name: cmdLine
-        #   id: cmdLine
-        #   run: |
-        #     EXIT_CODE=${{ steps.polaris-scan.outputs.status }}
-        #     echo "Polaris Scan exit status - $EXIT_CODE"
+      - name: Checkout Source
+        uses: actions/checkout@v4
+      - name: Coverity Scan
+        uses: blackduck-inc/black-duck-security-scan@SIGINT-4250
+        with:
+          ### SCANNING: Required fields
+          coverity_url: ${{ vars.COVERITY_URL }}
+          coverity_user: ${{ secrets.COVERITY_USER }}
+          coverity_passphrase: ${{ secrets.COVERITY_PASSPHRASE }}
+                            
+          ### Coverity Connect users - Uncomment below
+          # coverity_local: true
+          
+          ### POLICY ENFORCEMENT: Uncomment to break build on policy
+          # coverity_policy_view: 'Outstanding Issues'
+          
+          ### PULL REQUEST COMMENTS:
+          coverity_prComment_enabled: true
+          ## Use the parameter below to add comments for issues filtered
+          ## by impact. Default is High if unset
+          ## NOTE: Issues matching coverity_policy_view are ignored if set
+          coverity_prComment_impacts: 'High,Medium,Low,Audit'
+          github_token: ${{ secrets.GH_TOKEN }} # Required when PR comments is enabled
+          bridgecli_download_url: https://artifactory.tools.duckutil.net/artifactory/clops-local/integrations/bridge/binaries/bridge-cli-bundle/3.10.0rc5/bridge-cli-bundle-3.10.0rc5-macos_arm.zip
