--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Polaris Scan
       id: polaris-scan
-      uses: blackduck-inc/black-duck-security-scan@SIGINT-4250
+      uses: blackduck-inc/black-duck-security-scan@main
       with:
         ### SCANNING: Required fields
         polaris_server_url: ${{ vars.POLARIS_URL }}
